--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "canvas": "^2.8.0",
+    "color": "^3.1.3",
     "mustache": "^4.2.0",
     "sass": "^1.35.1"
   },
   "scripts": {
+    "social-images": "node ./scripts/social-images.js",
     "start": "node ./scripts/start.js",
     "deploy": "./script/deploy.sh"
   }
